Remove some useless using statement

--- a/src/Templates/EnumsTemplate.cshtml
+++ b/src/Templates/EnumsTemplate.cshtml
@@ -1,9 +1,6 @@
-﻿@using AutoRest.Core.Utilities
-@using AutoRest.Go
+﻿@using AutoRest.Go
 @using AutoRest.Go.Model
 @using AutoRest.Go.Templates
-@using System;
-@using System.Collections.Generic;
 @using System.Linq;
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
