--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -143,7 +143,7 @@ else
     </text>
 }
 
-@if (Model.BaseIsPolymorphic || Model.IsPolymorphic || Model.HasFlattenedFields || Model.AllProperties.Any(p => p.ModelType is DictionaryTypeGo) || Model.AllProperties.Any(p => p.IsReadOnly))
+@if (Model.NeedsCustomMarshalling)
 {
     <text>
         @EmptyLine
@@ -233,7 +233,7 @@ else
     </text>
 }
 
-@if (Model.NeedsCustomMarshalling)
+@if (Model.NeedsCustomUnmarshalling)
 {
     var vsp = new VariableScopeProvider();
     var receiverVar = Model.Name.FixedValue.ToVariableName(vsp);
