Add the missing @

--- a/src/Templates/MetadataTemplate.cshtml
+++ b/src/Templates/MetadataTemplate.cshtml
@@ -13,6 +13,6 @@
     "inputFiles": [
         @(string.Join(",\n", inputFiles))
     ],
-    "outputFolder": outputFolder
+    "outputFolder": @outputFolder
 }
 
