--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -481,7 +481,7 @@ else
                 <text>
                     var future @Model.MethodReturnType()
                     future, err = client.@(Model.Name)(@(Model.HelperInvocationParameters()))
-                    result.Future = future.Future
+                    result.FutureAPI = future.FutureAPI
                 </text>
             }
             else
