--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -319,7 +319,7 @@ else
                 }
                 else
                 {
-                    // modeled return types embed autorest.Resposne as an anonymous field
+                    // modeled return types embed autorest.Response as an anonymous field
                     // so in order to assign the raw HTTP response to the *http.Response field
                     // in it we need an extra ".Response" :(
                     <text>
