Sender: fixing a panic when the HTTP Response is nil
Should the Azure Front Door receive a request but not return a response the `err` here will
be nil - as such accessing `.StatusCode` will panic. This commit adds a nil-check which
should avoid the panic.

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -324,7 +324,7 @@ else
                     // in it we need an extra ".Response" :(
                     <text>
                     sender := autorest.DecorateSender(client, autorest.DoRetryForStatusCodes(client.RetryAttempts, client.RetryDuration, autorest.StatusCodesForRetry...))
-                    if @(resultVarTarget).Response.Response, err = future.GetResult(sender); err == nil && @(resultVarTarget).Response.Response.StatusCode != http.StatusNoContent {
+                    if @(resultVarTarget).Response.Response, err = future.GetResult(sender); err == nil && @(resultVarTarget).Response.Response != nil && @(resultVarTarget).Response.Response.StatusCode != http.StatusNoContent {
                         @resultVar, err = client.@(ftg.ResponderMethodName)(@(resultVarTarget).Response.Response)
                         if err != nil {
                             err = autorest.NewErrorWithError(err, "@futureTypeName", "Result", @(resultVarTarget).Response.Response, "Failure responding to request")
