--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -324,7 +324,11 @@ else
                     // in it we need an extra ".Response" :(
                     <text>
                     sender := autorest.DecorateSender(client, autorest.DoRetryForStatusCodes(client.RetryAttempts, client.RetryDuration, autorest.StatusCodesForRetry...))
-                    if @(resultVarTarget).Response.Response, err = future.GetResult(sender); err == nil && @(resultVarTarget).Response.Response.StatusCode != http.StatusNoContent {
+                    @(resultVarTarget).Response.Response, err = future.GetResult(sender)
+                    if @(resultVarTarget).Response.Response == nil && err == nil {
+                        err = autorest.NewErrorWithError(err, "@futureTypeName", "Result", nil, "received nil response and error")
+                    }
+                    if err == nil && @(resultVarTarget).Response.Response.StatusCode != http.StatusNoContent {
                         @resultVar, err = client.@(ftg.ResponderMethodName)(@(resultVarTarget).Response.Response)
                         if err != nil {
                             err = autorest.NewErrorWithError(err, "@futureTypeName", "Result", @(resultVarTarget).Response.Response, "Failure responding to request")
