fix an unexpected change

--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -85,7 +85,7 @@
         if err != nil {
         return nil, err
         }
-        @(EmptyLine)Array[index] = @(Model.Name.FixedValue.ToVariableName())
+        @(Model.Name.FixedValue.ToVariableName())Array[index] = @(Model.Name.FixedValue.ToVariableName())
         }
         return @(Model.Name.FixedValue.ToVariableName())Array, nil
         }
