fixing an issue when the Future fails but no response is set

--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -516,6 +516,7 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
                 return
             }
             if !done {
+                @:@(resultVarTarget).Response = future.Response()
                 err = azure.NewAsyncOpIncompleteError("@futureTypeName")
                 return
             }
