--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -293,6 +293,7 @@ else
         }
         <text>
             var resp *http.Response
+            future.FutureAPI = &azure.Future{}
             resp, err = client.Send(req, @Model.SendDecorators.EmitAsArguments())
             if err != nil {
             return
