Return the future's HTTP response if available
This ensures that the DetailedError is populated with the HTTP response
if the initial LRO response returns a failed status code.

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -104,7 +104,7 @@ else
     <text>
         result, err = client.@(Model.SenderMethodName)(req)
         if err != nil {
-        err = @(Model.AutorestError("Failure sending request"))
+        err = @(Model.AutorestError("Failure sending request", "result.Response()"))
         return
         }
     </text>
