--- a/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -8,7 +8,7 @@ var err error
         {%- set example = step.exampleModel %}
         {%- set clientVariable = jsFunc.uncapitalize(example.operationGroup.language.go.clientName) %}
         {%- if allVariables.indexOf(clientVariable)<0 %}
-    {{clientVariable}}, err := {{packageName}}.{{example.operationGroup.language.go.clientCtorName}}({{example.clientParametersOutput + ", " if example.clientParametersOutput else ""}}testsuite.cred, testsuite.options)
+    {{clientVariable}}, err := {{packageName}}.{{example.operationGroup.language.go.clientCtorName}}({{jsFunc.getParamsValue(example.clientParametersOutput) + ", " if example.clientParametersOutput.length>0 else ""}}testsuite.cred, testsuite.options)
     testsuite.Require().NoError(err)
         {%- set _ = allVariables.push(clientVariable) %}
         {%- endif %}
@@ -27,9 +27,9 @@ var err error
         {%- if example.returnInfo.length == 2 %}
             {%- if example.isLRO %}
                 {%- set pollerVariable = jsFunc.genVariableName(example.pollerType) + "Poller" %}
-                {{pollerVariable}}, err {%- if allVariables.indexOf(pollerVariable)<0 %}:{%- set _ = allVariables.push(pollerVariable) %}{%- endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
+                {{pollerVariable}}, err {%- if allVariables.indexOf(pollerVariable)<0 %}:{%- set _ = allVariables.push(pollerVariable) %}{%- endif %}= {{clientVariable}}.{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
             {%- else %}
-                {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err {% if example.checkResponse and allVariables.indexOf(resVariable)<0 %}:{%- set _ = allVariables.push(resVariable) %}{% endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
+                {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err {% if example.checkResponse and allVariables.indexOf(resVariable)<0 %}:{%- set _ = allVariables.push(resVariable) %}{% endif %}= {{clientVariable}}.{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
             {%- endif %}
             testsuite.Require().NoError(err)
             {%- if example.isLRO %}
@@ -44,7 +44,7 @@ var err error
             {%- endif %}
         {%- elif  (example.returnInfo.length == 1) and (example.isPageable) %}
             {%- set pagerVariable = clientVariable + example.opName %}
-            {{pagerVariable}} {%- if allVariables.indexOf(pagerVariable)<0 %}:{%- set _ = allVariables.push(pagerVariable) %}{%- endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
+            {{pagerVariable}} {%- if allVariables.indexOf(pagerVariable)<0 %}:{%- set _ = allVariables.push(pagerVariable) %}{%- endif %}= {{clientVariable}}.{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
             for {{pagerVariable}}.More() {
                 {% if example.checkResponse %}nextResult{% else %}_{% endif %}, err := {{pagerVariable}}.NextPage(testsuite.ctx)
                 testsuite.Require().NoError(err)
@@ -57,7 +57,7 @@ var err error
                 break
             }
         {%- else %}
-            {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
+            {{clientVariable}}.{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
         {%- endif %}
 
         {%- if example.isLRO and example.isPageable %}
